[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/card_ui.gd" id="1"]

[node name="CardUI" type="PanelContainer"]
custom_minimum_size = Vector2(100, 140)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Cost: 1"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Card Name"

[node name="DamageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Description"
autowrap_mode = 2
